WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
89165
[BlackBerry] media volume slider in wrong position (master_38 regression)
https://bugs.webkit.org/show_bug.cgi?id=89165
Summary
[BlackBerry] media volume slider in wrong position (master_38 regression)
Max Feil
Reported
2012-06-14 22:10:53 PDT
Due to upstream simplification of the volume slider (
bug 82150
) it now appears in the wrong location below the media controls. The programmatic controls sizing we do in RenderThemeBlackBerry.cpp relies on absolute positioning of the volume slider container, so the best way to fix this is to set the bottom offset.
Attachments
Patch
(1.87 KB, patch)
2012-06-14 22:14 PDT
,
Max Feil
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Max Feil
Comment 1
2012-06-14 22:14:04 PDT
Created
attachment 147731
[details]
Patch
WebKit Review Bot
Comment 2
2012-06-15 07:17:45 PDT
Comment on
attachment 147731
[details]
Patch Clearing flags on attachment: 147731 Committed
r120453
: <
http://trac.webkit.org/changeset/120453
>
WebKit Review Bot
Comment 3
2012-06-15 07:17:50 PDT
All reviewed patches have been landed. Closing bug.
Max Feil
Comment 4
2012-11-02 12:45:55 PDT
Closing bug for patch that landed a long time ago.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug