third_party/WebKit/Source/WebCore/platform/blackberry/RenderThemeBlackBerry.cpp
@@ -777,6 +777,7 @@ void RenderThemeBlackBerry::adjustMediaControlStyle(StyleResolver*, RenderStyle*
     case MediaVolumeSliderContainerPart:
         style->setWidth(controlsHeight);
         style->setHeight(volumeHeight);
+        style->setBottom(controlsHeight);
         break;
     default:
         break;
